--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,26 +1,36 @@
 #summary Release Notes
 
 = Release Notes =
+== October 25, 2012 ==
+Released version 0.9.7.
+  * Several fixes for Controls and Dashboards
+  * Better example code in Showcase
+  * Included ChartRangeFilter example
+----
 == October 15, 2012 ==
 Released version 0.9.6.
   * Updated library to the latest Google Chart Tools release (September 24, 2012)
   * Breaking change: StateChangedEvent renamed to StateChangeEvent (see issue 15)
   * Support for all underlying events in ChartWrapper
   * Minor bugfixes
+----
 == July 4, 2012 ==
 Released version 0.9.5.
   * Updated library to the latest Google Chart Tools release (June 18, 2012)
   * Better support for MVP pattern
+----
 == May 30, 2012 ==
 Released version 0.9.4.
   * Updated library to the latest Google Chart Tools release (May 02, 2012)
   * Workaround for automatically resizing GeoCharts
   * Small fixes and more documentation
+----
 == April 30, 2012 ==
 Released version 0.9.3.  
   * Introduced [https://developers.google.com/chart/interactive/docs/reference#google_visualization_charteditor ChartEditor]
   * Several bug fixes
   * Documentation improvements  
+----
 == April 10, 2012 ==
 Released version 0.9.2
   * Fixes several layout issues.  
@@ -28,6 +38,7 @@ Released version 0.9.2
 == April 04, 2012 ==
 Released version 0.9.1
   * Attach/detach support for all charts and parent elements
+----
 == March 30, 2012 ==
 Released version 0.9.0
   * First release
