--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,6 +1,6 @@
 #summary Table of Contents for the Google Chart Tools Library for GWT
  * [Overview Overview]
  * [GettingStarted Getting Started]
- * [Javadoc API Reference]
+ * [Documentation Documentation]
  * [ReleaseNotes Release Notes]
  * [FAQ FAQs]
