--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,24 +1,30 @@
 #summary Release Notes
 
 = Release Notes =
+== December 6, 2012 ==
+Released version 0.9.9.
+  * Better support for Data Roles
+  * Fixed Dashboard layout issues
+----
 == November 17, 2012 ==
 Released version 0.9.8.
-  * Breaking changes: DashboardWidget, ChartWrapperWidget and ControlWrapperWidget renamed to Dashboard, ChartWrapper and ControlWrapper
-  * More breaking changes: ControlWrapper introduces two generics, one for options and other for state
-  * New and simpler filter widgets: CategoryFilter, ChartRangeFilter, NumberRangeFilter, StringFilter (instead of using ControlWrapper)
+  * Now available in [http://search.maven.org/#search%7Cgav%7C1%7Cg%3A%22com.googlecode.gwt-charts%22%20AND%20a%3A%22gwt-charts%22 maven central repository]
+  * Breaking changes: `DashboardWidget`, `ChartWrapperWidget` and `ControlWrapperWidget` renamed to `Dashboard`, `ChartWrapper` and `ControlWrapper`
+  * More breaking changes: `ControlWrapper` introduces two generics, one for options and other for state
+  * New and simpler filter widgets: `CategoryFilter`, `ChartRangeFilter`, `NumberRangeFilter`, `StringFilter` (instead of using `ControlWrapper`)
   * Several JSNI fixes for Controls and Dashboards
 ----
 == October 25, 2012 ==
 Released version 0.9.7.
   * Several fixes for Controls and Dashboards
   * Better example code in Showcase
-  * Included ChartRangeFilter example
+  * Included `ChartRangeFilter` example
 ----
 == October 15, 2012 ==
 Released version 0.9.6.
   * Updated library to the latest Google Chart Tools release (September 24, 2012)
-  * Breaking change: StateChangedEvent renamed to StateChangeEvent (see issue 15)
-  * Support for all underlying events in ChartWrapper
+  * Breaking change: `StateChangedEvent` renamed to `StateChangeEvent` (see issue 15)
+  * Support for all underlying events in `ChartWrapper`
   * Minor bugfixes
 ----
 == July 4, 2012 ==
@@ -29,7 +35,7 @@ Released version 0.9.5.
 == May 30, 2012 ==
 Released version 0.9.4.
   * Updated library to the latest Google Chart Tools release (May 02, 2012)
-  * Workaround for automatically resizing GeoCharts
+  * Workaround for automatically resizing Geo Charts
   * Small fixes and more documentation
 ----
 == April 30, 2012 ==
