Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,6 +1,7 @@
 #summary Table of Contents for the Google Chart Tools Library for GWT
  * [Overview Overview]
  * [GettingStarted Getting Started]
+ * [Downloads Downloads]
  * [Documentation Documentation]
  * [ReleaseNotes Release Notes]
  * [FAQ FAQ]
