--- a/wiki/ReleaseNotes.wiki
+++ b/wiki/ReleaseNotes.wiki
@@ -1,6 +1,14 @@
 #summary Release Notes
 
 = Release Notes =
+== September 3, 2014 ==
+Released version 0.9.10.
+  *  Updated library to the latest Google Chart Tools release (June 25, 2014)
+  * New Charts: Annotation, Calendar, Histogram, Map, Org Chart, Sankey Diagram, Timeline, Diff Charts
+  * New Features: Trendlines, Intervals, Point Shapes, Stroke Dash, Explorer, Crosshairs
+  * Improved Showcase
+  * Several bug fixes (see [https://code.google.com/p/gwt-charts/issues/list?can=2&q=milestone=0.9.10 issues])
+
 == December 6, 2012 ==
 Released version 0.9.9.
   * Better support for Data Roles
